# catalog-crypto-api

./: Cargo.toml
migrations/: 20241223095509_create.sql  20241224043353_create_earning_history.sql
src/: main.rs  swagger.rs
src/api/routes/: depth.rs  earnings.rs  runepool.rs  swap.rs
src/core/models/: swap_history.rs
src/handlers/: depth_history.rs  earning_history.rs  mod.rs  runepool_unit_history.rs  swap_history.rs
src/model/: common.rs  depth_history.rs  earnings_history.rs  mod.rs  runepool_units_history.rs  swap_history.rs
src/services/: cron.rs  depth_history.rs  earnings_history.rs  mod.rs  runepool_units_history.rs  swap_history.rs
src/services/cron/: depth_history_cron.rs  earnings_history_cron.rs  mod.rs  runepool_units_history_cron.rs  swap_history_cron.rs
src/services/jobs/cron/: depth_history_cron.rs  earnings_history_cron.rs  mod.rs  runepool_units_history_cron.rs  swap_history_cron.rs
src/services/repository/: depth.rs  earnings.rs  runepool.rs  swap.rs
